tests/miniJava/neg/000541_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { false System.out.println ( { } ) ; } }
